# catch2-template

./: CMakeLists.txt  README.md
include/: binomial.h  factorial.h
src/: CMakeLists.txt  binomial.cpp  factorial.cpp
tests/: CMakeLists.txt  Factorial.cpp  test_binomial.cpp  test_factorial.cpp
